--- a/css/team.css
+++ b/css/team.css
@@ -1,27 +1,25 @@
-@font-face {
-    font-family: Roboto-bold;
-    src: url(/fonts/roboto-bold.ttf)
-}
+
 .header {
-    width: 1100;
-    height: 77;
+    width: 1100px;
+    height: 76;
     background-color: #1c5bc3;
 }
 .header__logo {
     float: left;
-    padding-top: 21px;
-    padding-bottom: 19px;
-    padding-left: 20px;
+    margin-top: 21px;
+    margin-bottom: 19px;
+    margin-left: 20px;
 }
 .header__info {
     text-align: right;
-    font-family: Roboto-bold;
+    font-family: "Roboto";
+    font-weight: 700;
+    padding-top: 20px;
 }
 .header__phone {
     color: #ffffff;
     font-size: 21px;
-    padding-top: 20px;
-    padding-right: 20px;
+    margin-right: 20px;
     padding-bottom: 4px;
 }
 .header__schedule {
@@ -33,6 +31,13 @@
 }
 .navigation {
     float: left;
+}
+.navigation__name {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.4px;       
 }
 .navigation a:link, a:visited, a:hover {
     text-decoration: none;
@@ -47,16 +52,126 @@
 }
 
 .navigation__mainLink {
-    list-style-image: url(/img/main_icon.png);
+    list-style-image: url(../img/main_icon.png);
 }
 .navigation__teamLink {
-    list-style-image: url(/img/team_iconActive.png);
+    list-style-image: url(../img/team_iconActive.png);
 }
 .navigation__feedLink {
-    list-style-image: url(/img/feed_icon.png);
+    list-style-image: url(../img/feed_icon.png);
 }
 .main {
     width: 868;
     height: 954;
     margin-left: 135px;
+}
+.breadcrumbs {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-style: italic;
+    font-size: 14px;
+}
+.breadcrumbs__item {
+    list-style: none;
+    display: inline;
+}
+.main__title {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-style: bold;
+    font-size: 49px;
+}
+.main__person {
+    list-style: none;
+    width: 256px;
+    display: inline-block;
+}
+.main__profile {
+    text-align: center;
+}
+.main__foto {
+    border-radius: 150px;
+}
+.main__name {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-style: bold;
+    font-size: 18px;
+}
+.main__job {
+    font-family: "Roboto";
+    font-weight: 700;
+    font-style: bold;
+    font-size: 14px;
+    color: #1c5bc3;
+}
+.main__bio {
+    font-family: "Roboto";
+    font-weight: 300;
+    font-size: 14px;
+}
+.footer {
+    font-family: "Roboto";
+    color: #fff;
+}
+.footer__copyright {
+    font-weight: 300;
+    font-size: 14px;
+    width: 235px;
+    margin-left: 19px;
+    float: left;
+}
+.footer {
+    width: 1100px;
+    height: 77px;
+    background-color: #1c5bc3;
+}
+a.footer__loftschool {
+    color: #fff;
+}
+.footer__logo {
+    margin-top: 20px;
+    margin-left: 236px;
+    margin-bottom: 21px;
+}
+.footer__social {
+    float: right;
+    font-style: bold;
+    font-weight: 700;
+    font-size: 14px;
+    margin-right: 20px;
+}
+.footer__title {
+    text-align: right;
+    margin-right: 20px;
+}
+.footer__links {
+    margin-right: 35px;
+}
+.footer__item {
+    list-style: none;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    background-color: #d2def3;
+    border-radius: 10px;
+}
+.footer__item:hover {
+    background-color: #fff;
+}
+.footer__vk {
+    margin: 6px 3px 6px 3px;
+}
+.footer__fb {
+    margin: 4px 7px 3px 7px;
+}
+.footer__google {
+    margin: 6px 2px 5px 3px;
+}
+.footer__twitter {
+    margin: 6px 4px 5px 5px;
+}
+.footer__mail {
+    margin: 5px 4px 6px 4px;
 }
