--- a/css/team.css
+++ b/css/team.css
@@ -1,42 +1,45 @@
-
-.wrapper {
-    max-width: 1100px;
-    margin: auto;
-}
-
 .header {
-    width: 1100px;
-    /* height: 76px; */
     background-color: #1c5bc3;
 }
-.header__logo {
+.homeLink_header {
     float: left;
     margin-top: 21px;
     margin-bottom: 19px;
     margin-left: 20px;
 }
+.homeLink_footer {
+    margin-top: 20px;
+    margin-left: 25%;
+    margin-bottom: 21px;
+}
 .info {
     text-align: right;
     font-family: "Roboto";
     font-weight: 700;
-    padding-top: 20px;
+    height: 76px;
 }
 .phone {
     color: #ffffff;
     font-size: 21px;
-    margin-right: 20px;
-    padding-bottom: 4px;
+}
+div.info a:link, a:visited, a:hover, a:active {
+    text-decoration: none;
+}
+.number {
+    color: #fff;
+    padding-top: 15px;
+    padding-right: 21px;
+    /* padding-bottom: 4px; */
 }
 .schedule {
-    /* color: #86A4EE; */
     color: white;
     opacity: .7;
     font-size: 14px;
     text-decoration: underline;
     padding-right: 21px;
-    padding-bottom: 12px;
+    padding-top: 0px;
+    padding-bottom: 17px;
 }
-
 .popup__block {
     font-family: "Roboto";
     height: 98px;
@@ -64,6 +67,7 @@
     transform: translateY(40px);
 }
 .navigation {
+    position: absolute;
     float: left;
     height: 19px;
     list-style: none;
@@ -172,6 +176,7 @@
     font-size: 14px;
 }
 .footer {
+    background-color: #1c5bc3;
     font-family: "Roboto";
     color: #fff;
 }
@@ -182,19 +187,14 @@
     margin-left: 19px;
     float: left;
 }
-.footer {
-    width: 1100px;
-    height: 77px;
-    background-color: #1c5bc3;
-}
 a.footer__loftschool {
     color: #fff;
 }
-.footer__logo {
+/* .footer__logo {
     margin-top: 20px;
-    margin-left: 236px;
+    margin-left: 25%;
     margin-bottom: 21px;
-}
+} */
 .footer__social {
     float: right;
     font-style: bold;
