--- a/css/team.css
+++ b/css/team.css
@@ -19,10 +19,11 @@
     height: 76px;
 }
 .phone {
-    color: #ffffff;
+    /* color: #ffffff; */
     font-size: 21px;
 }
-div.info a:link, a:visited, a:hover, a:active {
+.info a:link, a:visited, a:hover, a:active {
+    color: #fff;
     text-decoration: none;
 }
 .number {
