--- a/css/team.css
+++ b/css/team.css
@@ -38,7 +38,7 @@
     padding-top: 0px;
     padding-bottom: 17px;
 } */
-.popup__button {
+.schedule__button {
     background-color: #1c5bc3;
     color: white;
     opacity: .7;
@@ -60,7 +60,7 @@
     transform: translateY(-16px);
     display: none;
 }
-.popup:hover div {
+.schedule:hover div {
     display: block;
 }
 .workHours {
