--- a/css/team.css
+++ b/css/team.css
@@ -29,21 +29,6 @@
     color: #fff;
     text-decoration: none;
 }
-.dropdown__content {
-    display: none;
-    /* position: absolute; */
-    background-color: #fff;
-    min-width: 160px;
-    box-shadow: 0px 8px 10px 0px rgba(23,59,117,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    transform: translateY(20px);
-}
-
-.dropdown:hover .dropdown__content {
-    display: block;
-}
-
 .dropdown__button {
     background-color: #1c5bc3;
     color: white;
@@ -51,11 +36,26 @@
     font-size: 14px;
     text-decoration: underline;
     border: 0 #1c5bc3;
-    transform: translateX(-16px);
+    
+    /* transform: translateX(-16px); */
+    /* transform: translateY(40px); */
 }
-.schedule:hover div {
+.dropdown__content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 10px 0px rgba(23,59,117,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    transform: translateY(20px);
+    
+}
+
+.dropdown:hover .dropdown__content {
     display: block;
 }
+
 .workHours {
     color: #1c5bc3;
     font-weight: 700;
@@ -200,14 +200,16 @@ a.footer__loftschool {
     font-style: bold;
     font-weight: 700;
     font-size: 14px;
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 .footer__title {
     text-align: right;
     margin-right: 20px;
+    margin-top: 20px;
 }
 .footer__links {
     margin-right: 35px;
+    margin-top: -7px; 
 }
 .footer__item {
     list-style: none;
