--- a/css/team.css
+++ b/css/team.css
@@ -44,12 +44,14 @@
     display: none;
     position: absolute;
     background-color: #fff;
-    min-width: 160px;
-    box-shadow: 0px 8px 10px 0px rgba(23,59,117,0.2);
+    border-radius: 5px;
+    width: 133px;
+    height: 46px;
+    box-shadow: 0px 0px 20px 2px rgba(23,59,117,0.2);
     padding: 12px 16px;
     z-index: 1;
     transform: translateY(20px);
-    
+    text-align: left;
 }
 
 .dropdown:hover .dropdown__content {
@@ -58,13 +60,19 @@
 
 .workHours {
     color: #1c5bc3;
+    font-size: 14px;
     font-weight: 700;
-    /* transform: translateY(40px); */
+    /* transform: translateY(20px); */
+    /* transform: translateX(15px); */
+    padding-left: 5px;
 }
 .lunch {
+    font-size: 14px;
     color: #221f1f;
     font-weight: 300;
-    /* transform: translateY(40px); */
+    transform: translateY(6px);
+    /* transform: translateX(15px); */
+    padding-left: 5px;
 }
 .navigation {
     position: absolute;
