--- a/css/team.css
+++ b/css/team.css
@@ -4,7 +4,7 @@ html, body {
 }
 .wrapper {
     overflow: hidden;
-    /* min-width: 960px; */
+    min-width: 1100px;
     /* min-height: 100%; */
 }
 .wrapper:after {
@@ -12,32 +12,8 @@ html, body {
     display: block;
     height: 77px;
 }
-/* .container {
-    position: relative;
-    min-height: 100%;
-    overflow: scroll;
-} */
-
-.container--navigation {
-    width: 200px;
-    margin: auto;
-}
-.container--main {
-    width: 940px;
-    margin: auto;
-}
-
-/* .container--main:after {
-    content: "";
-    display: block;
-    height: 77px;
-} */
-.container--footer {
-    /* width: 940px; */
-    margin: auto;
-    overflow: hidden;
-    height: 77px;
-    background-color: #1c5bc3;
+.container {
+    width: 1060px;
 }
 ul {
     padding: 0;
@@ -145,7 +121,6 @@ li {
     float: left;
     height: 19px;
     list-style: none;
-    margin-left: -60px;
 }
 .navigation__name {
     font-family: "Roboto";
