--- a/css/team.css
+++ b/css/team.css
@@ -148,7 +148,7 @@ h1, h2, h3, h4, h5, h6 {
 .navigation__teamLink a {
     color: #221f1f;
 }
-.navigation__link p {
+.navigation__link div {
     padding-top: 2px;
 }
 .navigation__mainLink {
@@ -170,7 +170,7 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 35px;
     height: 19px;
 }
-.navigation__feedLink p {
+.navigation__feedLink div {
     padding-top: 3px;
 }
     
@@ -209,41 +209,52 @@ h1, h2, h3, h4, h5, h6 {
 
 .profile {
     list-style: none;
-    width: 256px;
+    width: 255px;
+    height: 372px;
     display: inline-block;
     vertical-align: top;
-    /* margin-left: 50px; */
-    padding: 0 22px;
+    text-align: center;
+    margin-bottom: 45px;
+    margin-left: 52px;
+    margin-right: -10px;
+    
 }
 .person {
-    text-align: center;
+    /* text-align: center; */
 }
 .profile__photo {
     /* border-radius: 80px; */
     height: 160px;
     width: 160px;
-    display: block;
+    display: inline-block;
     clip-path: circle(80px at 50% 50%);
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin-bottom: 14px;
 }
 .person__name {
     font-family: "Roboto";
     font-weight: 700;
     font-style: bold;
     font-size: 18px;
+    /* line-height: 21px; */
+    margin-bottom: 6px;
+
 }
 .person__position {
     font-family: "Roboto";
     font-weight: 700;
     font-style: bold;
     font-size: 14px;
+    /* line-height: 21px; */
     color: #1c5bc3;
+    margin-bottom: 10px;
 }
 .person__bio {
     font-family: "Roboto";
     font-weight: 300;
     font-size: 14px;
+    line-height: 21px;
 }
 .footer {
     background-color: #1c5bc3;
