footer, nav positioning

--- a/css/team.css
+++ b/css/team.css
@@ -46,16 +46,11 @@ h1, h2, h3, h4, h5, h6 {
     float: left;
     margin-top: 21px;
 }
-.homeLink_footer {
-    margin-top: 20px;
-    margin-left: 25%;
-    margin-bottom: 21px;
-}
 .info {
     padding-top: 15px;
     padding-bottom: 14px;
     text-align: right;
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     /* height: 76px; */
 }
@@ -72,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 .dropdown__button {
-    font-family: roboto;
+    font-family: 'Roboto', sans-serif;
     background-color: #1c5bc3;
     color: white;
     opacity: .7;
@@ -131,7 +126,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 1000px;
 }
 .navigation__name {
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 12px;
     text-transform: uppercase;
@@ -156,6 +151,7 @@ h1, h2, h3, h4, h5, h6 {
     background-repeat: no-repeat;
     padding-left: 35px;
     height: 18px;
+    margin-bottom: 32px;
 }
 
 .navigation__teamLink {
@@ -163,6 +159,7 @@ h1, h2, h3, h4, h5, h6 {
     background-repeat: no-repeat;
     padding-left: 35px;
     height: 18px;
+    margin-bottom: 32px;
 }
 .navigation__feedLink {
     background-image: url(../img/feed_icon.png);
@@ -180,7 +177,7 @@ h1, h2, h3, h4, h5, h6 {
     float: left;
 }
 .breadcrumbs {
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-style: italic;
     line-height: 14px;
@@ -199,7 +196,7 @@ h1, h2, h3, h4, h5, h6 {
     display: none;
 }
 .main__title {
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-style: bold;
     font-size: 49px;
@@ -233,7 +230,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 14px;
 }
 .person__name {
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-style: bold;
     font-size: 18px;
@@ -242,7 +239,7 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 .person__position {
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-style: bold;
     font-size: 14px;
@@ -251,32 +248,39 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 10px;
 }
 .person__bio {
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 14px;
     line-height: 21px;
 }
 .footer {
     background-color: #1c5bc3;
-    font-family: "Roboto";
+    font-family: 'Roboto', sans-serif;
     color: #fff;
     height: 77px;
-    margin-top: -77px;
+    margin-top: -13px;
 }
 .footer__copyright {
     font-weight: 300;
     font-size: 14px;
     width: 235px;
-    margin-left: 19px;
     float: left;
+    position: relative;
+    top: 14px;
+    /* left: 50px; */
 }
 a.footer__loftschool {
     color: #fff;
+    font-weight: 700;
 }
-.footer__homelink {
-    margin-top: 20px;
-    margin-left: 25%;
-    margin-bottom: 21px;
+.footer__loftschool strong {
+    font-weight: 700;
+}
+.homelink--footer {
+    position: relative;
+    top: 17px;
+    left: 235px;
+    /* margin-left: 25%; */
 }
 .footer__social {
     float: right;
@@ -287,12 +291,12 @@ a.footer__loftschool {
 }
 .footer__title {
     text-align: right;
-    margin-right: 20px;
-    margin-top: 20px;
+    margin-top: 15px;
+    margin-bottom: 9px;
 }
 .footer__links {
-    margin-right: 35px;
-    margin-top: -7px; 
+    margin-right: 15px;
+    /* margin-top: -7px;  */
 }
 .footer__item {
     list-style: none;
