--- a/css/team.css
+++ b/css/team.css
@@ -172,9 +172,9 @@ h1, h2, h3, h4, h5, h6 {
 }
     
 .main {
-    width: 870px;
+    /* width: 870px; */
     /* height: 954; */
-    float: left;
+    /* float: left; */
 }
 .breadcrumbs {
     font-family: 'Roboto', sans-serif;
@@ -252,6 +252,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
     height: 77px;
     margin-top: -13px;
+    min-width: 1100px;
 }
 .footer__copyright {
     font-weight: 300;
