--- a/css/team.css
+++ b/css/team.css
@@ -1,6 +1,7 @@
 html, body {
     width: 100%;
     height: 100%;
+    min-height: 100vh;
 }
 ul {
     padding: 0;
@@ -17,13 +18,13 @@ h1, h2, h3, h4, h5, h6 {
     overflow: hidden;
     min-width: 1100px;
     box-sizing: border-box;
-    /* min-height: 100%; */
+    min-height: 100vh;
 }
-.wrapper:after {
+/* .wrapper:after {
     content: "";
     display: block;
     height: 77px;
-}
+} */
 
 .container {
     width: 1060px;
@@ -121,9 +122,8 @@ h1, h2, h3, h4, h5, h6 {
     /* position: relative; */
     float: left;
     width: 140px;
-    height: 19px;
     list-style: none;
-    height: 1000px;
+    /* height: 1000px; */
     /* color: #1c5bc3 */
 }
 .navigation__name {
@@ -132,6 +132,17 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 2.4px;
+}
+.navigation__item {
+    margin-bottom: 30px;
+}
+.navigation img {
+    width: 19px;
+}
+.navigation span {
+    position: relative;
+    bottom: 3px;
+    padding-left: 15px;
 }
 .navigation a:link, a:visited {
     text-decoration: none;
@@ -142,75 +153,77 @@ h1, h2, h3, h4, h5, h6 {
     color: #4B2424;
 }
 
-.navigation__link div {
+/* .navigation__link div {
     padding-top: 2px;
-}
-.navigation__mainLink {
+} */
+/* .navigation__mainLink {
     background-image: url(../img/main_icon.png);
     background-repeat: no-repeat;
     padding-left: 35px;
-    height: 18px;
     margin-bottom: 32px;
-}
-.navigation__teamLink {
+} */
+/* .navigation__teamLink {
     background-image: url(../img/team_iconActive.png);
     background-repeat: no-repeat;
     padding-left: 35px;
     margin-bottom: 32px;
-}
-.navigation__teamLink a:hover, a:active {
+} */
+/* .navigation__teamLink a:hover, a:active {
     color: #4B2424;
-}
-.navigation__feedLink {
+} */
+/* .navigation__feedLink {
     background-image: url(../img/feed_icon.png);
     background-repeat: no-repeat;
     padding-left: 35px;
-}
-.navigation__feedLink div {
+} */
+/* .navigation__feedLink div {
     padding-top: 3px;
-}
+} */
 .breadcrumbs {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-style: italic;
     line-height: 14px;
     font-size: 14px;
-    margin-left: 180px;
     margin-bottom: 17px;
+    margin-left: 20px;
 }
 .breadcrumbs__item {
     list-style: none;
     display: inline;
 }
 .breadcrumbs__item:after {
-    content: "/ "
+    content: "/"
 }
 .breadcrumbs__item:last-child:after {
     display: none;
+}
+.main {
+    width: 900px;
+    float: right;
 }
 .main__title {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-style: bold;
     font-size: 49px;
-    margin-left: 175px;
     margin-bottom: 40px;
+    margin-left: 20px;
 }
 
 .profile {
     list-style: none;
     width: 255px;
-    height: 372px;
     display: inline-block;
     vertical-align: top;
     text-align: center;
     margin-bottom: 45px;
-    margin-left: 52px;
-    margin-right: -10px;
+    margin-right: 10px;
+    /* margin-right: 52px; */
+    margin-left: 30px;
     
 }
 .profile__photo {
-    height: 160px;
     width: 160px;
     display: inline-block;
     clip-path: circle(80px at 50% 50%);
@@ -244,7 +257,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
     color: #fff;
     height: 77px;
-    margin-top: -13px;
+    margin-top: 12px;
     min-width: 1060px;
 }
 .footer__copyright {
@@ -267,7 +280,6 @@ a.footer__loftschool {
     position: relative;
     top: 17px;
     left: 235px;
-    /* margin-left: 25%; */
 }
 .footer__social {
     float: right;
