--- a/css/team.css
+++ b/css/team.css
@@ -249,14 +249,14 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     font-size: 14px;
-    line-height: 21px;
+    line-height: 1.5;
 }
 .footer {
     background-color: #1c5bc3;
     font-family: 'Roboto', sans-serif;
     color: #fff;
     height: 77px;
-    margin-top: 22px;
+    margin-top: 23px;
     min-width: 1100px;
 }
 .footer__copyright {
