--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,153 @@ html, body {
     width: 100vh;
     height: 100vh;
 }
+ul {
+    padding: 0;
+    margin: 0;
+}
+li {
+    list-style: none;
+}
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    font-weight: normal;
+}
+.wrapper {
+    overflow: hidden;
+    min-width: 1100px;
+    box-sizing: border-box;
+    min-height: 100vh;
+}
+/* .wrapper:after {
+    content: "";
+    display: block;
+    height: 77px;
+} */
+
+.container {
+    width: 1060px;
+    margin: 0 auto;
+}
+.clearfix:before,
+.clearfix:after {
+ content: "";
+ display: table;
+}
+.clearfix:after {
+ clear: both;
+}
+
+.header {
+    background-color: #1c5bc3;
+    height: 76px;
+    margin-bottom: 44px;
+}
+.homeLink_header {
+    float: left;
+    margin-top: 21px;
+}
+.info {
+    padding-top: 15px;
+    padding-bottom: 14px;
+    text-align: right;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
+.phone {
+    /* color: #ffffff; */
+    float: right;
+    font-size: 21px;
+}
+.info a:link, a:visited, a:hover, a:active {
+    color: #fff;
+    text-decoration: none;
+}
+.dropdown {
+    position: relative;
+}
+.dropdown__button {
+    font-family: 'Roboto', sans-serif;
+    background-color: #1c5bc3;
+    color: white;
+    opacity: .7;
+    font-size: 14px;
+    font-weight: 700;
+    text-decoration: underline;
+    border: 0 #1c5bc3;
+    position: relative;
+    left: 4px;
+    top: 3px;
+    clear: right;
+    float: right;
+}
+.dropdown__content {
+    display: none;
+    position: absolute;
+    top: 48px;
+    right: -175px;
+    background-color: #fff;
+    border-radius: 5px;
+    width: 133px;
+    height: 46px;
+    box-shadow: 0px 0px 20px 2px rgba(23,59,117,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    transform: translateY(20px);
+    text-align: left;
+}
+
+.dropdown:hover .dropdown__content {
+    display: block;
+}
+
+.workHours {
+    color: #1c5bc3;
+    font-size: 14px;
+    font-weight: 700;
+    /* transform: translateY(20px); */
+    /* transform: translateX(15px); */
+    padding-left: 5px;
+}
+.lunch {
+    font-size: 14px;
+    color: #221f1f;
+    font-weight: 300;
+    transform: translateY(6px);
+    /* transform: translateX(15px); */
+    padding-left: 5px;
+}
+
+.navigation {
+    /* position: relative; */
+    float: left;
+    width: 140px;
+    list-style: none;
+    color: #1c5bc3
+}
+.navigation__name {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.4px;
+}
+.navigation__item {
+    margin-bottom: 30px;
+}
+.navigation img {
+    width: 19px;
+}
+.navigation span {
+    position: relative;
+    bottom: 3px;
+    padding-left: 15px;
+}
+.navigation a:link, a:visited {
+    text-decoration: none;
+    color: #1c5bc3;
+}
+.navigation a:active, a:hover {
+    text-decoration: none;
+    color: #4B2424;
+}
+
