--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 html, body {
-    width: 100vh;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
 }
 ul {
     padding: 0;
@@ -19,11 +20,11 @@ h1, h2, h3, h4, h5, h6 {
     box-sizing: border-box;
     min-height: 100vh;
 }
-/* .wrapper:after {
+.wrapper:after {
     content: "";
     display: block;
     height: 77px;
-} */
+}
 
 .container {
     width: 1060px;
@@ -37,6 +38,8 @@ h1, h2, h3, h4, h5, h6 {
 .clearfix:after {
  clear: both;
 }
+
+/* header and navigation styles  */
 
 .header {
     background-color: #1c5bc3;
@@ -59,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
     float: right;
     font-size: 21px;
 }
-.info a:link, a:visited, a:hover, a:active {
+.info :link, .info :visited, .info :hover, .info :active {
     color: #fff;
     text-decoration: none;
 }
@@ -117,38 +120,139 @@ h1, h2, h3, h4, h5, h6 {
     /* transform: translateX(15px); */
     padding-left: 5px;
 }
-
 .navigation {
     /* position: relative; */
     float: left;
     width: 140px;
     list-style: none;
-    color: #1c5bc3
+    /* color: #1c5bc3 */
 }
+.navigation__item {
+    margin-bottom: 30px;
+    margin-left: -4px;
+}
+.navigation__link {
+    text-decoration: none;
+    color: #1c5bc3;
+}
+.navigation__link:hover .navigation__icon_plane {
+    background: url(../img/main_iconActive.png) center center no-repeat;
+}
+.navigation__link:hover .navigation__icon_cap {
+    background: url(../img/team_iconActive.png) center center no-repeat;
+}
+.navigation__link:hover .navigation__icon_star {
+    background: url(../img/feed_iconActive.png) center center no-repeat;
+}
+  
+.navigation__icon {
+    width: 28px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    }
+
 .navigation__name {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 12px;
     text-transform: uppercase;
     letter-spacing: 2.4px;
-}
-.navigation__item {
-    margin-bottom: 30px;
-}
-.navigation img {
-    width: 19px;
-}
-.navigation span {
+    display: inline-block;
+    vertical-align: middle;
     position: relative;
-    bottom: 3px;
-    padding-left: 15px;
-}
-.navigation a:link, a:visited {
-    text-decoration: none;
-    color: #1c5bc3;
-}
-.navigation a:active, a:hover {
-    text-decoration: none;
-    color: #4B2424;
-}
+    left: 10px;
+    }
+.navigation__icon_plane {
+    background: url(../img/main_icon.png) center center no-repeat;
+    }
+.navigation__icon_cap {
+    background: url(../img/team_icon.png) center center no-repeat;
+    }
+.navigation__icon_star {
+    background: url(../img/feed_icon.png) center center no-repeat;
+    }
 
+.navigation__link:hover .navigation__name {
+    color: #221f1f;
+  }
+
+  /* End of header and navigation styles  */
+
+
+
+  /* footer styles */
+
+.footer {
+    background-color: #1c5bc3;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    height: 77px;
+    margin-top: -77px;
+    min-width: 1100px;
+}
+.footer__copyright {
+    font-weight: 300;
+    font-size: 14px;
+    width: 235px;
+    float: left;
+    position: relative;
+    top: 14px;
+}
+a.footer__loftschool {
+    color: #fff;
+    font-weight: 700;
+}
+.footer__loftschool strong {
+    font-weight: 700;
+}
+.homelink--footer {
+    position: relative;
+    top: 17px;
+    left: 235px;
+}
+.footer__social {
+    float: right;
+    font-style: bold;
+    font-weight: 700;
+    font-size: 14px;
+    /* margin-right: 20px; */
+}
+.footer__title {
+    text-align: right;
+    margin-top: 15px;
+    margin-bottom: 9px;
+}
+.footer__links {
+    margin-right: 15px;
+    /* margin-top: -7px;  */
+}
+.footer__item {
+    list-style: none;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-left: 7px;
+    background-color: #d2def3;
+    /* border-radius: 10px; */
+    clip-path: circle(10px at 50% 50%);
+}
+.footer__item:hover {
+    background-color: #fff;
+}
+.footer__vk {
+    margin: 6px 3px 6px 3px;
+}
+.footer__fb {
+    margin: 4px 7px 3px 7px;
+}
+.footer__google {
+    margin: 6px 2px 5px 3px;
+}
+.footer__twitter {
+    margin: 6px 4px 5px 5px;
+}
+.footer__mail {
+    margin: 5px 4px 6px 4px;
+}
+  /* end of footer styles */
