--- a/css/team.css
+++ b/css/team.css
@@ -20,11 +20,11 @@ h1, h2, h3, h4, h5, h6 {
     box-sizing: border-box;
     min-height: 100vh;
 }
-/* .wrapper:after {
+.wrapper:after {
     content: "";
     display: block;
     height: 77px;
-} */
+}
 
 .container {
     width: 1060px;
@@ -196,6 +196,7 @@ h1, h2, h3, h4, h5, h6 {
 .main {
     width: 920px;
     float: right;
+    margin-bottom: 24px;
 }
 .main__title {
     font-family: 'Roboto', sans-serif;
@@ -252,7 +253,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
     color: #fff;
     height: 77px;
-    margin-top: 23px;
+    margin-top: -77px;
     min-width: 1100px;
 }
 .footer__copyright {
