--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,9 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     font-weight: normal;
 }
+.bold {
+    font-weight: 700;
+}
 .wrapper {
     overflow: hidden;
     min-width: 1100px;
@@ -25,7 +28,6 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
     height: 77px;
 }
-
 .container {
     width: 1060px;
     margin: 0 auto;
@@ -58,7 +60,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
 .phone {
-    /* color: #ffffff; */
+    color: #ffffff;
     float: right;
     font-size: 21px;
 }
@@ -108,8 +110,6 @@ h1, h2, h3, h4, h5, h6 {
     color: #1c5bc3;
     font-size: 14px;
     font-weight: 700;
-    /* transform: translateY(20px); */
-    /* transform: translateX(15px); */
     padding-left: 5px;
 }
 .lunch {
@@ -117,15 +117,14 @@ h1, h2, h3, h4, h5, h6 {
     color: #221f1f;
     font-weight: 300;
     transform: translateY(6px);
-    /* transform: translateX(15px); */
     padding-left: 5px;
 }
 .navigation {
-    /* position: relative; */
     float: left;
     width: 140px;
     list-style: none;
-    /* color: #1c5bc3 */
+    border: 2px solid blue;
+    
 }
 .navigation__item {
     margin-bottom: 30px;
@@ -178,8 +177,54 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   /* End of header and navigation styles  */
+.main {
+    width: 820px;
+    margin-bottom: 77px;
+    border: 2px solid red;
+    float: right;
+    margin-right: 50px;
+}
 
+.main__title {
+    background-image: url(../img/clouds.png);
+    background-position-y: -76px;
+    background-color: #fff;
+    opacity: .75;
+    position: relative;
+    top: -43px;
+    height: 354px;
+    width: 879px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 49px;
+    font-weight: 700;
+}
+.company {
+    width: 698px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.66;
+}
+.booking {
+    width: 820px;
+    
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.66;
+    color: #fff;
+    background-color:#1c5bc3;
+    text-align: center;
+}
 
+.booking__link {
+    font-weight: 700;
+    color: #fff;
+}
+.phone--booking {
+    color: #fff;
+    font-weight: 700;
+}
 
   /* footer styles */
 
