--- a/css/index.css
+++ b/css/index.css
@@ -225,7 +225,11 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
     font-weight: 700;
 }
-
+.partners__title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 49px;
+    font-weight: 700;
+}
   /* footer styles */
 
 .footer {
