--- a/css/team.css
+++ b/css/team.css
@@ -1,3 +1,10 @@
+@import url('./layout/base.css');
+@import url('./layout/header.css');
+@import url('./layout/footer.css');
+@import url('./layout/maincontent.css');
+@import url('./layout/sidebar.css');
+@import url('./layout/teamstyles.css');
+
 html, body {
     width: 100%;
     height: 100%;
@@ -13,6 +20,9 @@ li {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
     font-weight: normal;
+}
+.bold {
+    font-weight: 700;
 }
 .wrapper {
     overflow: hidden;
@@ -38,6 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 .clearfix:after {
  clear: both;
 }
+
 .header {
     background-color: #1c5bc3;
     height: 76px;
@@ -264,9 +275,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 a.footer__loftschool {
     color: #fff;
-    font-weight: 700;
-}
-.footer__loftschool strong {
     font-weight: 700;
 }
 .homelink--footer {
