--- a/css/index.css
+++ b/css/index.css
@@ -1,180 +1,9 @@
-html, body {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-}
-ul {
-    padding: 0;
-    margin: 0;
-}
-li {
-    list-style: none;
-}
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    font-weight: normal;
-}
-.bold {
-    font-weight: 700;
-}
-.wrapper {
-    overflow: hidden;
-    min-width: 1100px;
-    box-sizing: border-box;
-    min-height: 100vh;
-}
-.wrapper:after {
-    content: "";
-    display: block;
-    height: 77px;
-}
-.container {
-    width: 1060px;
-    margin: 0 auto;
-}
-.clearfix:before,
-.clearfix:after {
- content: "";
- display: table;
-}
-.clearfix:after {
- clear: both;
-}
+@import url('./layout/base.css');
+@import url('./sections/header.css');
+@import url('./sections/sidebar.css');
+@import url('./sections/maincontent.css');
 
-/* header and navigation styles  */
 
-.header {
-    background-color: #1c5bc3;
-    height: 76px;
-    margin-bottom: 44px;
-}
-.homeLink_header {
-    float: left;
-    margin-top: 21px;
-}
-.info {
-    padding-top: 15px;
-    padding-bottom: 14px;
-    text-align: right;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-}
-.phone {
-    color: #ffffff;
-    float: right;
-    font-size: 21px;
-}
-.info :link, .info :visited, .info :hover, .info :active {
-    color: #fff;
-    text-decoration: none;
-}
-.dropdown {
-    position: relative;
-}
-.dropdown__button {
-    font-family: 'Roboto', sans-serif;
-    background-color: #1c5bc3;
-    color: white;
-    opacity: .7;
-    font-size: 14px;
-    font-weight: 700;
-    text-decoration: underline;
-    border: 0 #1c5bc3;
-    position: relative;
-    left: 4px;
-    top: 3px;
-    clear: right;
-    float: right;
-}
-.dropdown__content {
-    display: none;
-    position: absolute;
-    top: 48px;
-    right: -175px;
-    background-color: #fff;
-    border-radius: 5px;
-    width: 133px;
-    height: 46px;
-    box-shadow: 0px 0px 20px 2px rgba(23,59,117,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    transform: translateY(20px);
-    text-align: left;
-    /* background-image: url(..img/rounded-rectangle.svg); */
-}
-.dropdown:hover .dropdown__content {
-    display: block;
-}
-
-.workHours {
-    color: #1c5bc3;
-    font-size: 14px;
-    font-weight: 700;
-    padding-left: 5px;
-}
-.lunch {
-    font-size: 14px;
-    color: #221f1f;
-    font-weight: 300;
-    transform: translateY(6px);
-    padding-left: 5px;
-}
-.navigation {
-    float: left;
-    width: 140px;
-    list-style: none;
-    border: 2px solid blue;
-    
-}
-.navigation__item {
-    margin-bottom: 30px;
-    margin-left: -4px;
-}
-.navigation__link {
-    text-decoration: none;
-    color: #1c5bc3;
-}
-.navigation__link:hover .navigation__icon_plane {
-    background: url(../img/main_iconActive.png) center center no-repeat;
-}
-.navigation__link:hover .navigation__icon_cap {
-    background: url(../img/team_iconActive.png) center center no-repeat;
-}
-.navigation__link:hover .navigation__icon_star {
-    background: url(../img/feed_iconActive.png) center center no-repeat;
-}
-  
-.navigation__icon {
-    width: 28px;
-    height: 20px;
-    display: inline-block;
-    vertical-align: middle;
-    }
-
-.navigation__name {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.4px;
-    display: inline-block;
-    vertical-align: middle;
-    position: relative;
-    left: 10px;
-    }
-.navigation__icon_plane {
-    background: url(../img/main_icon.png) center center no-repeat;
-    }
-.navigation__icon_cap {
-    background: url(../img/team_icon.png) center center no-repeat;
-    }
-.navigation__icon_star {
-    background: url(../img/feed_icon.png) center center no-repeat;
-    }
-
-.navigation__link:hover .navigation__name {
-    color: #221f1f;
-  }
 
   /* End of header and navigation styles  */
 .main {
@@ -182,8 +11,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 77px;
     border: 2px solid red;
     float: right;
-    margin-top: -45px;
-    /* margin-right: 50px; */
+    margin-top: -195px;
     position: relative;
     margin-left: 50px;
 }
@@ -194,16 +22,13 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #fff;
     /* opacity: .75; */
 }
-.main__title {
+.main__title--position {
     position: relative;
     top: -43px;
     height: 354px;
     width: 879px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 49px;
-    font-weight: 700;
     position: relative;
-    left: 66px;
+    left: 26px;
     top: 150px;
 }
 .company {
