--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
     height: 77px;
 }
-.container {
+.container, .content {
     width: 1060px;
     margin: 0 auto;
 }
