--- a/css/team.css
+++ b/css/team.css
@@ -1,328 +1,6 @@
 @import url('./layout/base.css');
-@import url('./layout/header.css');
-@import url('./layout/footer.css');
-@import url('./layout/maincontent.css');
-@import url('./layout/sidebar.css');
-@import url('./layout/teamstyles.css');
-
-html, body {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-}
-ul {
-    padding: 0;
-    margin: 0;
-}
-li {
-    list-style: none;
-}
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    font-weight: normal;
-}
-.bold {
-    font-weight: 700;
-}
-.wrapper {
-    overflow: hidden;
-    min-width: 1100px;
-    box-sizing: border-box;
-    min-height: 100vh;
-}
-.wrapper:after {
-    content: "";
-    display: block;
-    height: 77px;
-}
-
-.container {
-    width: 1060px;
-    margin: 0 auto;
-}
-.clearfix:before,
-.clearfix:after {
- content: "";
- display: table;
-}
-.clearfix:after {
- clear: both;
-}
-
-.header {
-    background-color: #1c5bc3;
-    height: 76px;
-    margin-bottom: 44px;
-}
-.homeLink_header {
-    float: left;
-    margin-top: 21px;
-}
-.info {
-    padding-top: 15px;
-    padding-bottom: 14px;
-    text-align: right;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-}
-.phone {
-    /* color: #ffffff; */
-    float: right;
-    font-size: 21px;
-}
-.info :link, .info :visited, .info :hover, .info :active {
-    color: #fff;
-    text-decoration: none;
-}
-.dropdown {
-    position: relative;
-}
-.dropdown__button {
-    font-family: 'Roboto', sans-serif;
-    background-color: #1c5bc3;
-    color: white;
-    opacity: .7;
-    font-size: 14px;
-    font-weight: 700;
-    text-decoration: underline;
-    border: 0 #1c5bc3;
-    position: relative;
-    left: 4px;
-    top: 3px;
-    clear: right;
-    float: right;
-}
-.dropdown__content {
-    display: none;
-    position: absolute;
-    top: 48px;
-    right: -175px;
-    background-color: #fff;
-    border-radius: 5px;
-    width: 133px;
-    height: 46px;
-    box-shadow: 0px 0px 20px 2px rgba(23,59,117,0.2);
-    padding: 12px 16px;
-    z-index: 1;
-    transform: translateY(20px);
-    text-align: left;
-}
-
-.dropdown:hover .dropdown__content {
-    display: block;
-}
-
-.workHours {
-    color: #1c5bc3;
-    font-size: 14px;
-    font-weight: 700;
-    /* transform: translateY(20px); */
-    /* transform: translateX(15px); */
-    padding-left: 5px;
-}
-.lunch {
-    font-size: 14px;
-    color: #221f1f;
-    font-weight: 300;
-    transform: translateY(6px);
-    /* transform: translateX(15px); */
-    padding-left: 5px;
-}
-.navigation {
-    /* position: relative; */
-    float: left;
-    width: 140px;
-    list-style: none;
-    /* color: #1c5bc3 */
-}
-.navigation__item {
-    margin-bottom: 30px;
-    margin-left: -4px;
-}
-.navigation__link {
-    text-decoration: none;
-    color: #1c5bc3;
-}
-.navigation__link:hover .navigation__icon_plane {
-    background: url(../img/main_iconActive.png) center center no-repeat;
-}
-.navigation__link:hover .navigation__icon_cap {
-    background: url(../img/team_iconActive.png) center center no-repeat;
-}
-.navigation__link:hover .navigation__icon_star {
-    background: url(../img/feed_iconActive.png) center center no-repeat;
-}
-  
-.navigation__icon {
-    width: 28px;
-    height: 20px;
-    display: inline-block;
-    vertical-align: middle;
-    }
-
-.navigation__name {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: 2.4px;
-    display: inline-block;
-    vertical-align: middle;
-    position: relative;
-    left: 10px;
-    }
-.navigation__icon_plane {
-    background: url(../img/main_icon.png) center center no-repeat;
-    }
-.navigation__icon_cap {
-    background: url(../img/team_icon.png) center center no-repeat;
-    }
-.navigation__icon_star {
-    background: url(../img/feed_icon.png) center center no-repeat;
-    }
-
-.navigation__link:hover .navigation__name {
-    color: #221f1f;
-  }
-
-.breadcrumbs {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-style: italic;
-    line-height: 14px;
-    font-size: 14px;
-    margin-bottom: 17px;
-    margin-left: 40px;
-}
-.breadcrumbs__item {
-    list-style: none;
-    display: inline;
-}
-.breadcrumbs__item:after {
-    content: " /"
-}
-.breadcrumbs__item:last-child:after {
-    display: none;
-}
-.main {
-    width: 920px;
-    float: right;
-    margin-bottom: 24px;
-}
-.main__title {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-style: bold;
-    font-size: 49px;
-    margin-bottom: 40px;
-    margin-left: 40px;
-}
-
-.profile {
-    list-style: none;
-    width: 260px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: center;
-    margin-bottom: 40px;
-    margin-right: -14px;
-    margin-left: 50px;
-}
-.profile__photo {
-    width: 160px;
-    display: inline-block;
-    clip-path: circle(80px at 50% 50%);
-    margin-bottom: 14px;
-}
-.person__name {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-style: bold;
-    font-size: 18px;
-    margin-bottom: 6px;
-
-}
-.person__position {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    font-style: bold;
-    font-size: 14px;
-    /* line-height: 21px; */
-    color: #1c5bc3;
-    margin-bottom: 10px;
-}
-.person__bio {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 1.5;
-}
-.footer {
-    background-color: #1c5bc3;
-    font-family: 'Roboto', sans-serif;
-    color: #fff;
-    height: 77px;
-    margin-top: -77px;
-    min-width: 1100px;
-}
-.footer__copyright {
-    font-weight: 300;
-    font-size: 14px;
-    width: 235px;
-    float: left;
-    position: relative;
-    top: 14px;
-}
-a.footer__loftschool {
-    color: #fff;
-    font-weight: 700;
-}
-.homelink--footer {
-    position: relative;
-    top: 17px;
-    left: 235px;
-}
-.footer__social {
-    float: right;
-    font-style: bold;
-    font-weight: 700;
-    font-size: 14px;
-    /* margin-right: 20px; */
-}
-.footer__title {
-    text-align: right;
-    margin-top: 15px;
-    margin-bottom: 9px;
-}
-.footer__links {
-    margin-right: 15px;
-    /* margin-top: -7px;  */
-}
-.footer__item {
-    list-style: none;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin-left: 7px;
-    background-color: #d2def3;
-    /* border-radius: 10px; */
-    clip-path: circle(10px at 50% 50%);
-}
-.footer__item:hover {
-    background-color: #fff;
-}
-.footer__vk {
-    margin: 6px 3px 6px 3px;
-}
-.footer__fb {
-    margin: 4px 7px 3px 7px;
-}
-.footer__google {
-    margin: 6px 2px 5px 3px;
-}
-.footer__twitter {
-    margin: 6px 4px 5px 5px;
-}
-.footer__mail {
-    margin: 5px 4px 6px 4px;
-}
+@import url('./sections/header.css');
+@import url('./sections/sidebar.css');
+@import url('./sections/maincontent.css');
+@import url('./sections/teamstyles.css');
+@import url('./sections/footer.css');
