--- a/css/index.css
+++ b/css/index.css
@@ -2,25 +2,24 @@
 @import url('./sections/header.css');
 @import url('./sections/sidebar.css');
 @import url('./sections/maincontent.css');
+@import url('./sections/footer.css');
 
 
-
-  /* End of header and navigation styles  */
-.main {
+.main--position {
     width: 879px;
-    margin-bottom: 77px;
-    border: 2px solid red;
+    margin-bottom: 87px;
     float: right;
-    margin-top: -195px;
-    position: relative;
+    margin-top: -190px;
     margin-left: 50px;
 }
 .main__header {
     width: 879px;
     background-image: url(../img/clouds.png);
-    background-position: center;
+    /* background-position: center center; */
+    background-position-y: -76px;
     background-color: #fff;
     /* opacity: .75; */
+    margin-bottom: -19px;
 }
 .main__title--position {
     position: relative;
@@ -36,12 +35,18 @@
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 300;
-    line-height: 1.66;
+    line-height: 1.61;
 }
+.company .text {
+    white-space: pre-line;
+}
+/* .company__item {
+    text-indent: 20px;
+} */
 .booking {
     width: 600px;
     min-height: 78px;
-    padding: 20px 76px 16px 30px;
+    padding: 15px 70px 16px 30px;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
     font-weight: 300;
@@ -79,75 +84,3 @@
 .partners__link:hover .partners__icon_bmp {
     background: url(../img/logo/bmp.png) center center no-repeat;
 }
-  /* footer styles */
-
-.footer {
-    background-color: #1c5bc3;
-    font-family: 'Roboto', sans-serif;
-    color: #fff;
-    height: 77px;
-    margin-top: -77px;
-    min-width: 1100px;
-}
-.footer__copyright {
-    font-weight: 300;
-    font-size: 14px;
-    width: 235px;
-    float: left;
-    position: relative;
-    top: 14px;
-}
-a.footer__loftschool {
-    color: #fff;
-    font-weight: 700;
-}
-.homelink--footer {
-    position: relative;
-    top: 17px;
-    left: 235px;
-}
-.footer__social {
-    float: right;
-    font-style: bold;
-    font-weight: 700;
-    font-size: 14px;
-    /* margin-right: 20px; */
-}
-.footer__title {
-    text-align: right;
-    margin-top: 15px;
-    margin-bottom: 9px;
-}
-.footer__links {
-    margin-right: 15px;
-    /* margin-top: -7px;  */
-}
-.footer__item {
-    list-style: none;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    margin-left: 7px;
-    background-color: #d2def3;
-    /* border-radius: 10px; */
-    clip-path: circle(10px at 50% 50%);
-}
-.footer__item:hover {
-    background-color: #fff;
-}
-.footer__vk {
-    margin: 6px 3px 6px 3px;
-}
-.footer__fb {
-    margin: 4px 7px 3px 7px;
-}
-.footer__google {
-    margin: 6px 2px 5px 3px;
-}
-.footer__twitter {
-    margin: 6px 4px 5px 5px;
-}
-.footer__mail {
-    margin: 5px 4px 6px 4px;
-}
-  /* end of footer styles */
