--- a/css/sections/company.css
+++ b/css/sections/company.css
@@ -1,10 +1,3 @@
-@import url('./layout/base.css');
-@import url('./sections/header.css');
-@import url('./sections/sidebar.css');
-@import url('./sections/maincontent.css');
-@import url('./sections/footer.css');
-@import url('./sections/company.css');
-
 
 .company {
     width: 698px;
@@ -57,6 +50,6 @@
     margin-left: 0px;
     margin-right: 100px;
 }
-.partners__link:hover .partners__icon_bmp {
-    background: url(../img/logo/bmp.png) center center no-repeat;
-}
+/* .partners__link:hover .partners__icon_bmp {
+    background: url(../../img/logo/bmp.png) center center no-repeat;
+} */
